<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/grey10"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:padding="16dp"
                app:srcCompat="@drawable/baseline_clear_24" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/delete"
                android:textColor="@color/grey6"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/projectLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_list_drag"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp">

                <ImageView
                    android:id="@+id/playlistIcon"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="0"
                    android:background="@drawable/project_icon_progress"
                    android:padding="16dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/baseline_build_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/playlistTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/grey1"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/playlistSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/fileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_list_drag"
                android:breakStrategy="high_quality"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="TextView"
                android:textColor="@color/grey1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/promptText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/delete_prompt"
                android:textColor="@color/grey6"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/ripple"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/buttonIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/baseline_delete_forever_red_24" />

                <TextView
                    android:id="@+id/buttonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/dialog_button_delete"
                    android:textAllCaps="true"
                    android:textColor="@color/soft_red"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>